[package]
name = "pword"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.6"
rand = "0.8.5"
hex = "0.4"
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }
pem = "3.0.3"
base64 = "0.22.0"
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rpassword = "7.3.1"
